Fix z-index

--- a/ui/src/css/components/tooltip.css
+++ b/ui/src/css/components/tooltip.css
@@ -27,7 +27,7 @@
   pointer-events: none;
   position: absolute;
   width: auto;
-  z-index: 1;
+  z-index: 3;
 }
 .tooltip-seek-preview img {
 
